// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react-web-api > react-web-api 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.{ts,tsx}",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-array-constructor": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unassigned-vars": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-expressions": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": "error",
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "preserve-caught-error": "error",
          "require-yield": "error",
          "typescript/ban-ts-comment": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "react-web-api/no-leaked-event-listener",
      "react-web-api/no-leaked-interval",
      "react-web-api/no-leaked-resize-observer",
      "react-web-api/no-leaked-timeout",
    ],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "no-useless-assignment",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
    ],
  },
  "warnings": [
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.ts"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.tsx"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.mts"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.cts"]",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react-x\`",
  ],
}
`;

exports[`react-web-api --js-plugins > react-web-api--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.{ts,tsx}",
        ],
        "jsPlugins": [
          "eslint-plugin-react-web-api",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-array-constructor": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unassigned-vars": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-expressions": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": "error",
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "preserve-caught-error": "error",
          "react-web-api/no-leaked-event-listener": "error",
          "react-web-api/no-leaked-interval": "warn",
          "react-web-api/no-leaked-resize-observer": "warn",
          "react-web-api/no-leaked-timeout": "warn",
          "require-yield": "error",
          "typescript/ban-ts-comment": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "no-useless-assignment",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
    ],
  },
  "warnings": [
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.ts"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.tsx"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.mts"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.cts"]",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react-x\`",
  ],
}
`;

exports[`react-web-api --type-aware > react-web-api--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.{ts,tsx}",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-array-constructor": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unassigned-vars": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-expressions": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": "error",
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "preserve-caught-error": "error",
          "require-yield": "error",
          "typescript/ban-ts-comment": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "react-web-api/no-leaked-event-listener",
      "react-web-api/no-leaked-interval",
      "react-web-api/no-leaked-resize-observer",
      "react-web-api/no-leaked-timeout",
    ],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "no-useless-assignment",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
    ],
  },
  "warnings": [
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.ts"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.tsx"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.mts"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.cts"]",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react-x\`",
  ],
}
`;

exports[`react-web-api merge > react-web-api--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.{ts,tsx}",
        ],
        "plugins": [
          "typescript",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "no-array-constructor": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unassigned-vars": "error",
          "no-unexpected-multiline": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-expressions": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": "error",
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "preserve-caught-error": "error",
          "require-yield": "error",
          "typescript/ban-ts-comment": "error",
          "typescript/no-duplicate-enum-values": "error",
          "typescript/no-empty-object-type": "error",
          "typescript/no-explicit-any": "error",
          "typescript/no-extra-non-null-assertion": "error",
          "typescript/no-misused-new": "error",
          "typescript/no-namespace": "error",
          "typescript/no-non-null-asserted-optional-chain": "error",
          "typescript/no-require-imports": "error",
          "typescript/no-this-alias": "error",
          "typescript/no-unnecessary-type-constraint": "error",
          "typescript/no-unsafe-declaration-merging": "error",
          "typescript/no-unsafe-function-type": "error",
          "typescript/no-wrapper-object-types": "error",
          "typescript/prefer-as-const": "error",
          "typescript/prefer-namespace-keyword": "error",
          "typescript/triple-slash-reference": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
  },
  "skipped": {
    "js-plugins": [
      "react-web-api/no-leaked-event-listener",
      "react-web-api/no-leaked-interval",
      "react-web-api/no-leaked-resize-observer",
      "react-web-api/no-leaked-timeout",
    ],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "no-useless-assignment",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
    ],
  },
  "warnings": [
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.ts"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.tsx"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.mts"]",
    "ESLint AND glob patterns (nested arrays in files) are not supported in oxlint: ["**/*.{ts,tsx}","**/*.cts"]",
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react-x\`",
  ],
}
`;
